codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_mode_nudge_narrow.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 36)"
---
────────────────────────────────────
❯ make a plan

  gpt-5 default · /tmp/project
  Create a plan?  shift + tab use P…
