codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Codex to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────gpt-5.6-sol─0s╯"
"  gpt-5.6-sol default · /tmp/project                                            "
