codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for claude-opus-5

  1. Low               Fast responses with lighter reasoning
› 2. Medium (default)  Balanced reasoning for most tasks
  3. High              Deeper reasoning for complex tasks
  4. Extra high        Maximum reasoning depth for difficult tasks

  Press enter to confirm or esc to go back
