codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__renamed_thread_composer_title_truncated.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                "
"╭────[Roadmap cleanup across launch readiness …╮"
"│❯ Ask Codex to do anything                    │"
"╰──────────────────────────────────────────────╯"
"  gpt-5.3-codex default · /tmp/project          "
